fluxcd/apps/base/authentik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    linkerd.io/inject: enabled
