fluxcd/apps/base/authentik/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 9000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 9300
      protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 443
      protocol: TCP
    - port: 587
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${KUBE_API_CIDR}
    ports:
    - port: 6443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-outpost
spec:
  podSelector:
    matchLabels:
      app: authentik-outpost
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 9300
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-outpost-ldap
spec:
  podSelector:
    matchLabels:
      goauthentik.io/outpost-name: ldap-outpost
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - port: 3389
      protocol: TCP
    - port: 6636
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-outpost-proxy
spec:
  podSelector:
    matchLabels:
      goauthentik.io/outpost-name: proxy-outpost
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 9000
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: media
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - prowlarr
          - radarr
          - radarr4
          - sonarr
          - sonarr4
          - torrent
    ports:
    - port: 7878
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 8989
      protocol: TCP
    - port: 9696
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-outpost-proxy-public
spec:
  podSelector:
    matchLabels:
      goauthentik.io/outpost-name: proxy-outpost-public
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 9000
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ytars
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ytars-app-template
    ports:
    - port: 8080
      protocol: TCP
